--- a/model-context-protocol/ConsoleClient/ConsoleClient.csproj
+++ b/model-context-protocol/ConsoleClient/ConsoleClient.csproj
@@ -5,14 +5,15 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <PublishAot>true</PublishAot>
-        <InvariantGlobalization>true</InvariantGlobalization>
-        <LangVersion>latest</LangVersion>
+        <UserSecretsId>azure-openai-secrets</UserSecretsId>
+        <NoWarn>SKEXP0001</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="ModelContextProtocol" Version="0.2.0-preview.3" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.6" />
+        <PackageReference Include="Microsoft.Extensions.AI" Version="9.6.0" />
+        <PackageReference Include="Microsoft.SemanticKernel" Version="1.59.0" />
+        <PackageReference Include="ModelContextProtocol" Version="0.2.0-preview.3" />
     </ItemGroup>
 
 </Project>
