--- a/model-context-protocol/ConsoleClient/ConsoleClient.csproj
+++ b/model-context-protocol/ConsoleClient/ConsoleClient.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Microsoft.Extensions.AI" Version="9.6.0" />
         <PackageReference Include="Microsoft.SemanticKernel" Version="1.59.0" />
         <PackageReference Include="ModelContextProtocol" Version="0.2.0-preview.3" />
+        <PackageReference Include="ModelContextProtocol.AspNetCore" Version="0.2.0-preview.3" />
     </ItemGroup>
 
 </Project>
